# ChangeLog for app-admin/eselect-opengl
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-opengl/ChangeLog,v 1.29 2007/03/10 20:06:07 kugelfang Exp $

  10 Mar 2007; Danny van Dyk <kugelfang@gentoo.org>
  eselect-opengl-1.0.3.ebuild, eselect-opengl-1.0.4.ebuild,
  eselect-opengl-1.0.5.ebuild:
  QA: Removed all references to dyn_* functions.

  07 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  eselect-opengl-1.0.3.ebuild, eselect-opengl-1.0.4.ebuild,
  eselect-opengl-1.0.5.ebuild:
  Change all instances of [ to [[.

  07 Feb 2007; Simon Stelling <blubb@gentoo.org>
  eselect-opengl-1.0.5.ebuild:
  stable on amd64; bug 160535

  26 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  eselect-opengl-1.0.5.ebuild:
  Stable on Alpha.

  25 Jan 2007; Alexander H. Færøy <eroyf@gentoo.org>
  eselect-opengl-1.0.5.ebuild:
  Stable on MIPS.

  16 Jan 2007; Jeroen Roovers <jer@gentoo.org> eselect-opengl-1.0.5.ebuild:
  Stable for HPPA (bug #160535).

  14 Jan 2007; Joseph Jezak <josejx@gentoo.org> eselect-opengl-1.0.5.ebuild:
  Marked ppc stable for bug #160535.

  09 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  eselect-opengl-1.0.5.ebuild:
  stable x86, bug #160535

  09 Jan 2007; Markus Rothe <corsair@gentoo.org>
  eselect-opengl-1.0.5.ebuild:
  Stable on ppc64; bug #160535

  08 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  eselect-opengl-1.0.5.ebuild:
  Stable on sparc wrt #160535

  05 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  eselect-opengl-1.0.4.ebuild, eselect-opengl-1.0.5.ebuild:
  Changed eselect dependency to be >= 1.0.5 and closing bug #147660.

*eselect-opengl-1.0.5 (10 Oct 2006)

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  +eselect-opengl-1.0.5.ebuild:
  Bump to fix ROOT != /. Remove an unneeded sed from the ebuild as well.

  05 Oct 2006; Danny van Dyk <kugelfang@gentoo.org>
  eselect-opengl-1.0.3.ebuild, eselect-opengl-1.0.4.ebuild: