@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-opengl/Attic/eselect-opengl-1.0.5.ebuild,v 1.13 2007/03/10 20:06:07 kugelfang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-opengl/Attic/eselect-opengl-1.0.5.ebuild,v 1.14 2007/07/01 22:53:00 peper Exp $
 
 inherit multilib
 
@@ -22,7 +22,7 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd"
 IUSE=""
-RESTRICT="multilib-pkg-force"
+EMULTILIB_PKG="true"
 
 DEPEND="app-arch/bzip2"
 RDEPEND=">=app-admin/eselect-1.0.5"
