@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/Attic/ati-drivers-8.29.6.ebuild,v 1.3 2007/03/10 21:40:29 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/Attic/ati-drivers-8.29.6.ebuild,v 1.4 2007/07/01 22:50:47 peper Exp $
 
 IUSE="acpi doc opengl"
 
@@ -28,7 +28,8 @@ DEPEND=">=virtual/linux-sources-2.4
 PROVIDE="virtual/opengl"
 
 ATIBIN="${D}/opt/ati/bin"
-RESTRICT="nostrip multilib-pkg-force stricter"
+RESTRICT="nostrip stricter"
+EMULTILIB_PKG="true"
 
 MODULE_NAMES="fglrx(video:${WORKDIR}/common/lib/modules/fglrx/build_mod)"
 
