@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/Attic/ati-drivers-8.34.8.ebuild,v 1.4 2007/03/29 23:01:33 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/Attic/ati-drivers-8.34.8.ebuild,v 1.5 2007/07/01 22:50:47 peper Exp $
 
 IUSE="acpi qt3"
 
@@ -30,10 +30,7 @@ DEPEND="${RDEPEND}
 	x11-proto/xf86miscproto
 	x11-proto/xf86vidmodeproto"
 
-# Ignore QA warnings about multilib-pkg-force not existing:
-# multilib.eclass uses it (without it we do not install the 32 bit
-# libraries on amd64) --marienz
-RESTRICT="multilib-pkg-force"
+EMULTILIB_PKG="true"
 
 QA_EXECSTACK_x86="usr/lib/dri/fglrx_dri.so
 	usr/lib/opengl/ati/lib/libGL.so.1.2"
