@@ -1,6 +1,15 @@
 # ChangeLog for x11-drivers/ati-drivers
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.78 2007/06/17 14:02:12 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.79 2007/07/01 22:50:47 peper Exp $
+
+  01 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
+  ati-drivers-8.27.10-r1.ebuild, ati-drivers-8.28.8.ebuild,
+  ati-drivers-8.29.6.ebuild, ati-drivers-8.30.3.ebuild,
+  ati-drivers-8.30.3-r1.ebuild, ati-drivers-8.32.5.ebuild,
+  ati-drivers-8.33.6-r1.ebuild, ati-drivers-8.34.8.ebuild,
+  ati-drivers-8.35.5.ebuild, ati-drivers-8.36.5.ebuild,
+  ati-drivers-8.37.6.ebuild, ati-drivers-8.37.6-r1.ebuild:
+  (QA) RESTRICT="multilib-pkg-force" -> EMULTILIB_PKG="true"
 
   17 Jun 2007; Marien Zwart <marienz@gentoo.org>
   ati-drivers-8.37.6-r1.ebuild:
